# cpp-practice

./: .gitignore  CMakeLists.txt  main.cpp
src/: main.cpp
src/Advent_of_Code/Day1/: Not_Quite_Lisp.cpp  Not_Quite_Lisp.h
src/Advent_of_Code/Day2/: I_Was_Told_There_Would_Be_No_Math.cpp  I_Was_Told_There_Would_Be_No_Math.h
src/Advent_of_Code/Day3/: Perfectly_Spherical_Houses_in_a_Vacuum.cpp  Perfectly_Spherical_Houses_in_a_Vacuum.h
src/Games/: TicTacToe.cpp  TicTacToe.h
src/Games/StratagemCade/: Stratagem.cpp  Stratagem.h
src/Games/TicTacToe/: TicTacToe.h
src/Utils/: Stopwatch.hpp
